--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,13 @@
-  "<div style='border: 3px dashed red'>
-     <% if @visitor %>
-       Hello, <%= @visitor %>!
-     <% end %>
-     <% if @name %>
-       My name is <%= @name %>
-     <% end %>
-     <img src='http://bit.ly/1eze8aE'>
-   </div>"
+"<div style='border: 4px dashed red'>
+    <% if @visitor %>
+      Hello, <%= @visitor %>!
+    <% else %>
+      <form action="/hello">
+      My name is <%= @name %>
+      What's your name?
+      <input type="text" name="name">
+      <input type="submit" value="Submit">
+    </form>
+    <% end %>
+    <img src='http://localhost:4567/images/dog.png'>
+</div>"
